# Lemonaid-Backend-Public

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: main.yml
docker/: .dockerignore  Dockerfile  Dockerfile.lambda  docker-compose.yml
file_samples/: ALS-070325-LL.xlsx
init/: check_database.py  create_conversation_table.py  create_user_table.py  csv_ingestion.py  ingest.py
scripts/: deploy.sh  init_server.sh
src/: handler_server.py  main.py
src/core/: config.py  models.py
src/modules/auth/: api.py
src/modules/auth/lib/: cognito_utils.py
src/modules/auth/service/: auth.py
src/modules/chatbot/: api.py
src/modules/chatbot/lib/: attachment_parser.py  display_formatter.py  similarity_retriever.py
src/modules/chatbot/service/: server.py
src/modules/conversation/: conversation_api_config.py  conversation_handler.py  conversation_repository.py  conversation_service.py
src/modules/summarize/: api.py
src/modules/summarize/service/: summarize.py
src/shared/: DB_utils.py  Embedding_utils.py  File_utils.py  S3_utils.py  jwt_auth.py
tests/: test_attachment_parser.py  test_similarity_retriever.py
